[gd_scene load_steps=10 format=2]

[ext_resource path="res://Cards/CardBase/CardBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Borders/Border1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Borders/Card_Background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Borders/Card_Back.png" type="Texture" id=4]
[ext_resource path="res://Assets/Borders/Focus_Border.png" type="Texture" id=5]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
void fragment(){
	COLOR=texture(TEXTURE,UV);
	if(COLOR.a>0.5){
		COLOR.a=1.0;
	}else{
		COLOR.a=0.0
	}
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="Shader" id=5]
code = "//shader_type canvas_item;
//void fragment(){
//	COLOR=texture(TEXTURE,UV);
//	if(COLOR.a>0.5){
//		COLOR.a=1.0;
//	}else{
//		COLOR.a=0.0
//	}
//}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 5 )

[node name="CardBase" type="MarginContainer"]
material = SubResource( 4 )
margin_right = 250.0
margin_bottom = 350.0
script = ExtResource( 1 )

[node name="Card" type="Sprite" parent="."]
position = Vector2( -1.52588e-05, 3.05176e-05 )
scale = Vector2( 5, 5 )
z_index = 1
centered = false

[node name="Border" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
z_index = 1
texture = ExtResource( 2 )
centered = false

[node name="Bars" type="VBoxContainer" parent="."]
margin_right = 250.0
margin_bottom = 350.0

[node name="Top_Gap" type="MarginContainer" parent="Bars"]
margin_right = 250.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="Top_Bar" type="HBoxContainer" parent="Bars"]
margin_top = 29.0
margin_right = 250.0
margin_bottom = 43.0

[node name="Left_Gap" type="MarginContainer" parent="Bars/Top_Bar"]
margin_right = 25.0
margin_bottom = 14.0
rect_min_size = Vector2( 25, 0 )

[node name="Name" type="MarginContainer" parent="Bars/Top_Bar"]
margin_left = 29.0
margin_right = 55.0
margin_bottom = 14.0

[node name="BackGround" type="NinePatchRect" parent="Bars/Top_Bar/Name"]
margin_right = 26.0
margin_bottom = 14.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 69, 32 )

[node name="CenterContainer" type="CenterContainer" parent="Bars/Top_Bar/Name"]
margin_right = 26.0
margin_bottom = 14.0

[node name="Name" type="Label" parent="Bars/Top_Bar/Name/CenterContainer"]
material = SubResource( 2 )
margin_right = 26.0
margin_bottom = 14.0
text = "Null"

[node name="Focus" type="TextureButton" parent="."]
margin_right = 250.0
margin_bottom = 350.0
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardBack" type="Sprite" parent="."]
position = Vector2( 128, 176 )
z_index = 1
texture = ExtResource( 4 )

[connection signal="mouse_entered" from="Focus" to="." method="_on_Focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_Focus_mouse_exited"]
